Bug 403103 - Remember last output save directory
Summary: Remember last output save directory
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-11 14:04 UTC by Tao Guo
Modified: 2019-04-21 19:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tao Guo 2019-01-11 14:04:11 UTC
SUMMARY
Konsole not remember last output save directory

STEPS TO REPRODUCE
1. Click File -> save output as
2. Choose a directory except home dir and save
3. Save output again

OBSERVED RESULT
the directory in save file dialog still is home dir

EXPECTED RESULT
the save file dialog remember last save directory 

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.14
KDE Frameworks Version: 5.53
Qt Version: 5.12

ADDITIONAL INFORMATION
None
Comment 1 Nate Graham 2019-01-15 20:13:32 UTC
Spectacle already does this and we have a request for Okular to do the same: Bug 400103. Seems reasonable to do it here too.
Comment 2 Nate Graham 2019-01-18 16:07:39 UTC
Patch: https://phabricator.kde.org/D18352
Comment 3 Kurt Hindenburg 2019-04-21 19:16:05 UTC
Git commit 61ed2c88a4e205eb5eef2df6cdb13c7ddd6e2943 by Kurt Hindenburg.
Committed on 21/04/2019 at 19:12.
Pushed by hindenburg into branch 'master'.

Remember last 'Save Output As' directory

This will save current session's last 'Save Output As' directory as
well as saving it so next Konsole startup will remember it.

Original code by Tao Guo <guotao945@gmail.com> with additions
by myself.
FIXED-IN: 19.08.0

Differential Revision: https://phabricator.kde.org/D18352

M  +24   -3    src/SaveHistoryTask.cpp
M  +2    -0    src/SaveHistoryTask.h

https://commits.kde.org/konsole/61ed2c88a4e205eb5eef2df6cdb13c7ddd6e2943