Remember last 'Save Output As' directory

This will save current session's last 'Save Output As' directory as
well as saving it so next Konsole startup will remember it.

Original code by Tao Guo <guotao945@gmail.com> with additions
by myself.

BUG: 403103
FIXED-IN: 19.08.0

Differential Revision: https://phabricator.kde.org/D18352